fix travel pass backend

--- a/views/partials/Aside.ejs
+++ b/views/partials/Aside.ejs
@@ -44,6 +44,13 @@
                     <label for="">Holiday</label>
                 </a>
             </div>
+            <div class="container-aside-list-dropdown">
+                <a href="/admin/travelpass">
+                    <i class="fa-solid fa-calendar-check"></i>
+                    <label for="">Travel Pass</label>
+                </a>
+            </div>
+            
         </div>
         <div class="container-aside-list">
             <label for="payroll">Settings</label>
