--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -13,6 +13,7 @@ body{
     background-color: #f5f6fa;
     font-family: 'Lato', sans-serif;
     color: #2f3542;
+    font-size: .75rem;
 }
 
 main, aside, nav{
@@ -483,9 +484,8 @@ button{
 
 .event-container-layout{
     display: flex;
-    flex-direction: column;
+    width: 100%;
     gap: 1em;
-    align-items: flex-end;
 }
 
 
