--- a/views/holiday.ejs
+++ b/views/holiday.ejs
@@ -18,50 +18,89 @@
                         </div>
                         <div class="event-container">
                             <div class="event-container-layout">
-                                <div class="employee-container components box-shadow">
-                                    <div>
-                                        <div class="label-ico">
-                                            <label for="fullname">Holiday Name *</label> <i class="fa-regular fa-circle-question"></i>
-                                        </div>
-                                        <input type="text" placeholder="Holiday Name" name="name" class="box-shadow" id='holidayName'>
-                                        <label for="error" class="fname-error error">a</label>
+                                <div class="employee-container components box-shadow" style="width: 30%; height:280px">
+                                    <div class="add">
+                                        <form class="submit">
+                                            <div class="section">
+                                                <div>
+                                                    <div class="label-ico">
+                                                        <label for="fullname">Holiday Name *</label> <i class="fa-regular fa-circle-question"></i>
+                                                    </div>
+                                                    <input type="text" placeholder="Holiday Name" name="name" class="box-shadow" id='holidayName'>
+                                                    <label for="error" class="fname-error error">a</label>
+                                                </div>
+                                                <div>
+                                                    <div class="label-ico">
+                                                        <label for="predate">Preqrequisite Date *</label> <i title="date an employee must attend" class="fa-regular fa-circle-question"></i>
+                                                    </div>
+                                                    <input type="date" placeholder="Preqrequisite Date" name="predate" class="box-shadow" >
+                                                    <label for="error" class="predate-error error">a</label>
+                                                </div>
+                                                <div>
+                                                    <div class="label-ico">
+                                                        <label for="date">Requisite Date *</label> <i title="date of holiday" class="fa-regular fa-circle-question"></i>
+                                                    </div>
+                                                    <input type="date" placeholder="Requisite Date" name="date" class="box-shadow">
+                                                    <label for="error" class="date-error error">a</label>
+                                                </div>
+                                                <script>
+                                                    let form = document.querySelector('.submit')
+                                                    const fnameErr = document.querySelector('.fname-error')
+                                                    const idErr = document.querySelector('.id-error')
+                                                    const preDateErr = document.querySelector('.predate-error')
+                                                    const dateErr = document.querySelector('.date-error')
+
+                                                    const idInput = document.querySelector('#idNo')
+                                                    const holidayNameInput = document.querySelector('#holidayName')
+                                                    form.addEventListener('submit', async (e) => {
+                                                        e.preventDefault();
+                                                        const doc = {
+                                                            name : form.name.value,
+                                                            predate : form.predate.value,
+                                                            date : form.date.value,
+                                                        }
+                                                        console.log('client 1:', doc)
+                                                        const res = await fetch('http://localhost:3000/admin/api/events/holiday',{
+                                                            headers:{'Content-Type': 'application/json'},
+                                                            body: JSON.stringify(doc),
+                                                            method: 'POST'
+                                                        })
+
+                                                        const data = await res.json()
+                                                        
+                                                        if(data) console.log('response:', data)
+                                                        if(data.err) {
+                                                            fnameErr.textContent = data.err.name
+                                                            preDateErr.textContent = data.err.preDate
+                                                            dateErr.textContent = data.err.date
+                                                        }
+                                                        location.href = 'http://localhost:3000/admin/holidays'
+                                                    })
+
+                                                    // const viewBtns = document.querySelectorAll('.button')
+                                                    // const editBtn = document.querySelector('.button-edit')
+                                                    // // const id = viewBtn.dataset.id
+                                                    // for(let i = 0; i < viewBtns.length; i++){
+                                                    //     viewBtns[i].addEventListener('click', (e)=>{
+                                                    //         const id = viewBtns[i].dataset.id
+                                                    //         location.assign(`http://localhost:3000/admin/employees/view/${id}`)
+                                                    //     })
+                                                    // }
+                                                
+                                                    // viewBtn.addEventListener('click', (e)=>{
+                                                    //     location.assign(`http://localhost:3000/admin/employees/view/${id}`)
+                                                    // })
+                                                    
+                                                </script>
+                                            </div>
+                                            <button class="button-submit add-emp-btn">Save this event</button>
+                                        </form>
                                     </div>
-                                    <div>
-                                        <div class="label-ico">
-                                            <label for="predate">Preqrequisite Date *</label> <i title="date an employee must attend" class="fa-regular fa-circle-question"></i>
-                                        </div>
-                                        <input type="date" placeholder="Preqrequisite Date" name="predate" class="box-shadow" >
-                                        <label for="error" class="predate-error error">a</label>
-                                    </div>
-                                    <div>
-                                        <div class="label-ico">
-                                            <label for="date">Requisite Date *</label> <i title="date of holiday" class="fa-regular fa-circle-question"></i>
-                                        </div>
-                                        <input type="date" placeholder="Requisite Date" name="date" class="box-shadow">
-                                        <label for="error" class="date-error error">a</label>
-                                    </div>
-                                    <script>
-                                        // const viewBtns = document.querySelectorAll('.button')
-                                        // const editBtn = document.querySelector('.button-edit')
-                                        // // const id = viewBtn.dataset.id
-                                        // for(let i = 0; i < viewBtns.length; i++){
-                                        //     viewBtns[i].addEventListener('click', (e)=>{
-                                        //         const id = viewBtns[i].dataset.id
-                                        //         location.assign(`http://localhost:3000/admin/employees/view/${id}`)
-                                        //     })
-                                        // }
-                                       
-                                        // viewBtn.addEventListener('click', (e)=>{
-                                        //     location.assign(`http://localhost:3000/admin/employees/view/${id}`)
-                                        // })
-        
-                                    </script>
-                                </div>
-                                <a href="/admin/holidays/add" class="button button-submit">Add holiday</a>
+                                
                             </div>
                             
                             <div class="event-container-layout">
-                                <div class="employee-container components box-shadow">
+                                <div class="employee-container components box-shadow" style="width:auto">
                                     <table class="employee-table">
                                         <tr>
                                             <th style="width: 30%">Holiday Name</th>
@@ -81,7 +120,7 @@
                                         </tr>
                                         <%}); %>
                                     </table>
-                                    <script>
+                                    <script> 
                                         // const viewBtns = document.querySelectorAll('.button')
                                         // const editBtn = document.querySelector('.button-edit')
                                         // // const id = viewBtn.dataset.id
