--- a/views/partials/Aside.ejs
+++ b/views/partials/Aside.ejs
@@ -50,7 +50,15 @@
                     <label for="">Travel Pass</label>
                 </a>
             </div>
-            
+        </div>
+        <div class="container-aside-list">
+            <label for="payroll">Deductions</label>
+            <div class="container-aside-list-dropdown">
+                <a href="/admin/deductions">
+                    <i class="fa-solid fa-calendar-check"></i>
+                    <label for="">Deductions</label>
+                </a>
+            </div>
         </div>
         <div class="container-aside-list">
             <label for="payroll">Settings</label>
