--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -419,10 +419,86 @@ button{
     width: 100%;
     background-color: #ffff;
 }
+.employee-table a{
+    color: #353b48;
+}
 
 .employee-table tr td:nth-child(1), .employee-table tr td:nth-child(2){
     width: 125px;
 }
+
+.employee-table th{
+    border-bottom: 1px solid #2f3542; 
+}
+.employee-table th, .employee-table td{
+    text-align: start;
+}
+.employee-table tr.sub-detail{
+    background-color: #FAFAFA;  
+}
+/* TABLE DETAILS AND SUB DETAILS */
+.employee-table .payroll-details .container{
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    width: 100%;
+}
+.employee-table .payroll-details .container .main .header{
+    display: flex;
+    gap: 2em;
+    margin:0 0 1em 1.25em;
+}
+.employee-table .payroll-details .container > .header{
+    display: flex;
+    justify-content: space-between;
+}
+.employee-table .payroll-details .container > .header .right{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .5em;
+    font-size: 1.25em;
+    margin-right: 1em;
+}
+.employee-table .payroll-details .container .main .header div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.employee-table .payroll-details .container .main .tables{
+    display: flex;
+    width: 100%;
+    gap: 3em;
+    margin-left: 1.25em;
+}.employee-table .payroll-details .container .main .table:nth-child(1){
+    width: 40%;
+}
+
+.employee-table .payroll-details .container .main .header div label:nth-child(1){
+    font-weight: 700;
+}
+
+.employee-table .main .table .details td{
+    border-bottom: 0px;
+    padding: 0;
+}
+.employee-table .main .table .sub-detail td:nth-child(1), .employee-table .main .table .sub-detail td:nth-child(2){
+    padding-left: 1em;
+    text-align: start;
+}
+.employee-table .main .table .sub td:nth-child(1), .employee-table .main .table .sub td:nth-child(2){
+    padding-left: 2em;
+    text-align: start;
+    
+}
+.employee-table .main .table .sub-detail td:nth-child(3), .employee-table .main .table .details td:nth-child(3){
+    text-align: end;
+}
+.employee-table .main .table .sub-detail td:nth-child(1), .employee-table .main .table .sub-detail .total{
+    font-weight: 700;
+}
+
 
 /* ADD EMPLOYEE */
 .employee-container .head{
