--- a/views/travelPass.ejs
+++ b/views/travelPass.ejs
@@ -18,7 +18,7 @@
                     </div>
                     <div class="event-container">
                         <div class="event-container-layout">
-                            <div class="employee-container components box-shadow" style="width: 30%; height:280px">
+                            <div class="employee-container components box-shadow">
                                 <div class="add">
                                     <form class="submit">
                                         <div class="section">
